// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RowWrapper renders correctly 1`] = `
<table>
  <tbody>
    <RowWrapper
      className=""
      onResize={[MockFunction]}
      onScroll={[MockFunction]}
      row={
        Object {
          "isExpanded": undefined,
          "isOpen": undefined,
        }
      }
      rowProps={null}
      trRef={
        [MockFunction] {
          "calls": Array [
            Array [
              <tr
                class=""
              />,
            ],
          ],
          "results": Array [
            Object {
              "isThrow": false,
              "value": undefined,
            },
          ],
        }
      }
    >
      <tr
        className=""
        hidden={false}
      />
    </RowWrapper>
  </tbody>
</table>
`;

exports[`RowWrapper renders expanded correctly 1`] = `
<table>
  <tbody>
    <RowWrapper
      className=""
      row={
        Object {
          "isExpanded": true,
        }
      }
      rowProps={null}
    >
      <tr
        className="pf-c-table__expandable-row pf-m-expanded"
        hidden={false}
      />
    </RowWrapper>
  </tbody>
</table>
`;
